--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 PORT = 5000
-MONGODB_URI = mongodb+srv://harirajlimbu:harirajlimbu@cluster0.dhksr.mongodb.net/
+MONGODB_URI = mongodb+srv://harirajlimbu:harirajlimbu@cluster0.dhksr.mongodb.net/e-commerce
+SECRET_KEY = Khesehang Samsohang Limbu
+NODE_ENV = development
